# imv-tui

./: Cargo.toml  PROFILING.md  README.md  flake.nix
.agents/: AGENTS.md
.agents/skills/code_review/: SKILL.md
.agents/skills/image_processing/: SKILL.md
.agents/skills/keybindings/: SKILL.md
.agents/skills/line_editing/: SKILL.md
.agents/skills/terminal_graphics/: SKILL.md
.agents/skills/testing/: SKILL.md
.agents/skills/tui_architecture/: SKILL.md
.cargo/: config.toml
src/: app.rs  cli.rs  commands.rs  image_worker.rs  main.rs  ui.rs
src/app/: adjustments.rs  cache.rs  classifications.rs  events.rs  line_editor.rs  mod.rs  palette.rs  queue.rs
src/commands/: mod.rs  registry.rs
src/config/: cli.rs  keys.rs  mod.rs
src/imaging/: decoder.rs  mod.rs  raw.rs  types.rs  worker.rs
src/ui/: mod.rs
src/ui/views/: image_view.rs  info_box.rs  infobar.rs  mod.rs  palette.rs  prompt.rs  slideshow_paused.rs  status_hud.rs
