[package]
name = "imv-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
image = "0.25.10"
ratatui = "0.30.2"
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm"] }
libc = "0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
