[package]
name = "imv-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
image = "0.25.10"
ratatui = "0.30.2"
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm"] }
libc = "0.2"
fast_image_resize = { version = "6.0.0", features = ["image"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
zune-jpeg = "0.4.13"
nucleo = "0.5.0"
strum = { version = "0.26.3", features = ["derive"] }
kamadak-exif = "0.6.1"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true            # Enable debug symbols for profiling
opt-level = 3           # Maximum optimizations for speed
lto = "fat"             # Enables aggressive whole-program link-time optimizations
codegen-units = 1       # Optimizes whole-program at the expense of longer compile times
panic = "abort"         # Removes panic unwinding, reducing binary size and runtime checks
overflow-checks = false # Disables integer overflow runtime checks (use only if safe)
